<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="okay_10">Okay (10%)</string>
    <string name="round_up_the_tip">Round Up the Tip?</string>
    <string name="calculate">Calculate</string>
    <string name="zero">0.0</string>
    <string name="tip_amount">Tip Amount:- %s</string>
</resources>